@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 Crown Copyright
+ * Copyright 2022-2023 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,14 +21,14 @@ import com.amazonaws.services.sqs.AmazonSQS;
 import com.amazonaws.services.sqs.AmazonSQSClientBuilder;
 import com.amazonaws.services.sqs.model.CreateQueueResult;
 import com.amazonaws.services.sqs.model.Message;
-import org.apache.parquet.hadoop.ParquetWriter;
-import org.junit.ClassRule;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
+import org.apache.hadoop.conf.Configuration;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 import org.testcontainers.containers.localstack.LocalStackContainer;
+import org.testcontainers.junit.jupiter.Container;
+import org.testcontainers.junit.jupiter.Testcontainers;
 import org.testcontainers.utility.DockerImageName;
-import sleeper.configuration.jars.ObjectFactory;
+
 import sleeper.configuration.properties.InstanceProperties;
 import sleeper.configuration.properties.table.TableProperties;
 import sleeper.configuration.properties.table.TablePropertiesProvider;
@@ -39,8 +39,11 @@ import sleeper.core.record.Record;
 import sleeper.core.schema.Field;
 import sleeper.core.schema.Schema;
 import sleeper.core.schema.type.IntType;
-import sleeper.ingest.IngestProperties;
 import sleeper.ingest.IngestRecordsFromIterator;
+import sleeper.ingest.impl.IngestCoordinator;
+import sleeper.ingest.impl.ParquetConfiguration;
+import sleeper.ingest.impl.partitionfilewriter.DirectPartitionFileWriterFactory;
+import sleeper.ingest.impl.recordbatch.arraylist.ArrayListRecordBatchFactory;
 import sleeper.statestore.FileInfo;
 import sleeper.statestore.StateStore;
 import sleeper.statestore.StateStoreException;
@@ -48,22 +51,27 @@ import sleeper.statestore.dynamodb.DynamoDBStateStoreCreator;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
+import static java.nio.file.Files.createTempDirectory;
 import static org.assertj.core.api.Assertions.assertThat;
 import static sleeper.configuration.properties.table.TableProperty.PARTITION_SPLIT_THRESHOLD;
+import static sleeper.ingest.testutils.IngestCoordinatorTestHelper.parquetConfiguration;
+import static sleeper.ingest.testutils.IngestCoordinatorTestHelper.standardIngestCoordinator;
 
+@Testcontainers
 public class FindPartitionsToSplitIT {
-    @ClassRule
+    @Container
     public static LocalStackContainer localStackContainer = new LocalStackContainer(DockerImageName.parse(CommonTestConstants.LOCALSTACK_DOCKER_IMAGE))
             .withServices(LocalStackContainer.Service.DYNAMODB, LocalStackContainer.Service.SQS);
 
-    @Rule
-    public TemporaryFolder tempDir = new TemporaryFolder();
+    @TempDir
+    public Path tempDir;
 
     private static final Schema SCHEMA = Schema.builder().rowKeyFields(new Field("key", new IntType())).build();
 
@@ -126,25 +134,23 @@ public class FindPartitionsToSplitIT {
     }
 
     private void writeFiles(StateStore stateStore, Schema schema, List<List<Record>> recordLists) {
+        ParquetConfiguration parquetConfiguration = parquetConfiguration(schema, new Configuration());
         recordLists.forEach(list -> {
             try {
-                File stagingArea = tempDir.newFolder();
-                File directory = tempDir.newFolder();
-                IngestProperties properties = IngestProperties.builder()
-                        .objectFactory(new ObjectFactory(new InstanceProperties(), null, ""))
-                        .localDir(stagingArea.getAbsolutePath())
-                        .maxRecordsToWriteLocally(0L)
-                        .maxInMemoryBatchSize(1_000_000L)
-                        .rowGroupSize(ParquetWriter.DEFAULT_BLOCK_SIZE)
-                        .pageSize(ParquetWriter.DEFAULT_PAGE_SIZE)
-                        .compressionCodec("zstd")
-                        .stateStore(stateStore)
-                        .schema(schema)
-                        .filePathPrefix("file://")
-                        .bucketName(directory.getAbsolutePath())
-                        .ingestPartitionRefreshFrequencyInSecond(1_000_000)
-                        .build();
-                new IngestRecordsFromIterator(properties, list.iterator()).write();
+                File stagingArea = createTempDirectory(tempDir, null).toFile();
+                File directory = createTempDirectory(tempDir, null).toFile();
+                try (IngestCoordinator<Record> coordinator = standardIngestCoordinator(stateStore, schema,
+                        ArrayListRecordBatchFactory.builder()
+                                .parquetConfiguration(parquetConfiguration)
+                                .localWorkingDirectory(stagingArea.getAbsolutePath())
+                                .maxNoOfRecordsInMemory(1_000_000)
+                                .maxNoOfRecordsInLocalStore(1000L)
+                                .buildAcceptingRecords(),
+                        DirectPartitionFileWriterFactory.from(parquetConfiguration,
+                                "file://" + directory.getAbsolutePath())
+                )) {
+                    new IngestRecordsFromIterator(coordinator, list.iterator()).write();
+                }
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
@@ -261,7 +267,7 @@ public class FindPartitionsToSplitIT {
                 .map(FileInfo::getNumberOfRecords)).reduce(Long::sum);
 
         // 109 + 108 + 107 + 106 + 105 = 535
-        assertThat(numberOfRecords).contains(new Long(535));
+        assertThat(numberOfRecords).contains(Long.valueOf(535L));
     }
 
     public static class TestTablePropertiesProvider extends TablePropertiesProvider {
